# dolores

./: .gitignore  README.md  pyproject.toml  reproduction.md
analysis/: browse_benchmarks.py  dr_analysis.py  results.py  rlm_analysis.py
configs/agents/: debug.yaml  debug_tiny.yaml  deepsearchqa.yaml  deepsearchqa02.yaml  deepsearchqa_decomp.yaml  deepsearchqa_nomodel.yaml  oolong.yaml  oolong02.yaml  oolong_decomp.yaml  oolong_nomodel.yaml  phantomwiki.yaml  phantomwiki02.yaml  phantomwiki03.yaml  phantomwiki_decomp.yaml  phantomwiki_nomodel.yaml  synthworld.yaml  synthworld02.yaml  synthworld_decomp.yaml  synthworld_nomodel.yaml
configs/experiment_base/: benchmark_deepsearchqa.yaml  benchmark_helloworld.yaml  benchmark_oolong.yaml  benchmark_phantom.yaml  benchmark_synthworld.yaml  inference_remote_api.yaml  inference_vllm_1gpu.yaml  inference_vllm_2gpu.yaml  inference_vllm_4gpu.yaml  model_llama3_70b.yaml  model_qwen3_32b.yaml  model_qwen3_8b.yaml  model_search_tool_llama3.yaml  model_search_tool_qwen3_32b.yaml  model_search_tool_qwen3_8B.yaml
configs/main/debug/: debug_deepsearchqa.yaml  debug_helloworld.yaml  debug_phantom.yaml  debug_synthworld.yaml
configs/main/llama3_70b/: llama3_70b_deepsearchqa.yaml  llama3_70b_oolong.yaml  llama3_70b_phantomwiki_size50.yaml  llama3_70b_phantomwiki_size500.yaml  llama3_70b_phantomwiki_size5000.yaml  llama3_70b_synthworld.yaml  llama3_70b_synthworld_v2.yaml
configs/main/qwen3_32b/: qwen3_32b_deepsearchqa.yaml  qwen3_32b_oolong.yaml  qwen3_32b_phantomwiki_size50.yaml  qwen3_32b_phantomwiki_size500.yaml  qwen3_32b_phantomwiki_size5000.yaml  qwen3_32b_synthworld.yaml  qwen3_32b_synthworld_v2.yaml
configs/main/qwen3_32b_decomp/: qwen3_32b_deepsearchqa_decomp.yaml  qwen3_32b_oolong_decomp.yaml  qwen3_32b_phantomwiki_size500_decomp.yaml  qwen3_32b_synthworld_decomp.yaml
configs/main/qwen3_32b_nomodel/: qwen3_32b_deepsearchqa_nomodel.yaml  qwen3_32b_oolong_nomodel.yaml  qwen3_32b_phantomwiki_size500_nomodel.yaml  qwen3_32b_synthworld_nomodel.yaml
configs/main/qwen3_8b/: qwen3_8b_deepsearchqa.yaml  qwen3_8b_oolong.yaml  qwen3_8b_phantomwiki_size50.yaml  qwen3_8b_phantomwiki_size500.yaml  qwen3_8b_phantomwiki_size5000.yaml  qwen3_8b_synthworld.yaml  qwen3_8b_synthworld_v2.yaml
deep-reasoner/: README.md  pyproject.toml
deep-reasoner/configs/: README.md
deep-reasoner/configs/examples/: _debug_agent_body.yaml  local_vllm_question.yaml  remote_api_question.yaml
deep-reasoner/deep_reasoner/: __init__.py  cli_base.py  cli_utils.py  code_exec.py  core.py  deepreasoner.py  example.py  llm.py  logging_utils.py  test_smoke.py
deep-reasoner/deep_reasoner/config/: __init__.py  debug_agent.yaml
deep-reasoner/deep_reasoner/eval/: __init__.py  view_sub_json.py
scripts/: check_parallel.sh  run_baseline.sh  sbatch_baselines.sh  sbatch_eval.sh  slurm_baselines.sh  slurm_eval.sh  watch_experiments.sh
src/: config.py  core.py  prompts.py  vllm_utils.py
src/baselines/: __init__.py  codeact.py  cot.py  deepresearch.py  react.py  rlm.py
src/benchmarks/: __init__.py  parsing.py
src/benchmarks/deepresearchqa/: __init__.py  deepresearch_agent.py  deepresearchqa.py
src/benchmarks/hello_world/: __init__.py  hello_world.py
src/benchmarks/oolong/: __init__.py  eval_helpers.py  oolong.py
src/benchmarks/phantomwiki/: __init__.py  phantomwiki.py  score.py  tools.py
src/dolores/: deepsearchqa_cli.py  experiment.py  oolong_cli.py  phantomwiki_cli.py  synthworld_cli.py
(+6 files in other folders)
